Let FileIOUtil take resolved entities directly